added http-server as dependency

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Calculator made for the Odin Project fundamentals",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "http-server"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/nugentcaillin/odin-calculator#readme",
   "dependencies": {
     "jest": "^29.7.0"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
   }
 }
