--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "url": "https://github.com/nugentcaillin/odin-calculator/issues"
   },
   "homepage": "https://github.com/nugentcaillin/odin-calculator#readme",
-  "dependencies": {
-    "jest": "^29.7.0"
-  },
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "jest": "^29.7.0"
   }
 }
